@@ -4,7 +4,7 @@
 
   <groupId>com.v2soft.AndLib</groupId>
   <artifactId>commondata</artifactId>
-  <version>1.1.2</version>
+  <version>1.1.3</version>
   <packaging>jar</packaging>
   <name>commondata</name>
   <url>http://maven.apache.org</url>
